apollo-router/src/query_planner/snapshots/apollo_router__query_planner__bridge_query_planner__tests__impl-4.snap
---
source: apollo-router/src/query_planner/bridge_query_planner.rs
expression: "subselections_keys(\"query Q { me {\n            username\n            # myName:\n             name {\n                firstName: first\n                ... @defer { lastName: last }\n            }\n        }}\").await"
---
 { me { username name { firstName: first } } }
/me/name { lastName: last }
