apollo-router/src/query_planner/snapshots/apollo_router__query_planner__bridge_query_planner__tests__impl-5.snap
---
source: apollo-router/src/query_planner/bridge_query_planner.rs
expression: "subselections_keys(\"query Q { user(id: 42) {\n            username\n            name {\n                first\n                ... @defer { last }\n            }\n        }}\").await"
---
 { user(id: 42) { username name { first } } }
/user/name { last }
