apollo-router/src/query_planner/snapshots/apollo_router__query_planner__bridge_query_planner__tests__impl-7.snap
---
source: apollo-router/src/query_planner/bridge_query_planner.rs
expression: "subselections_keys(\"query Q { me {\n            username\n            ... on User @defer {\n                name { first last }\n            }\n        }}\").await"
---
 { me { username } }
/me { ... on User { name { first last } } }
