apollo-router/src/query_planner/snapshots/apollo_router__query_planner__bridge_query_planner__tests__impl-8.snap
---
source: apollo-router/src/query_planner/bridge_query_planner.rs
expression: "subselections_keys(\"query Q { me {\n            username\n            ... @defer {\n                ... on User {\n                    name { first last }\n                }\n            }\n        }}\").await"
---
 { me { username } }
/me { name { first last } }
