apollo-router/src/query_planner/snapshots/apollo_router__query_planner__bridge_query_planner__tests__impl-9.snap
---
source: apollo-router/src/query_planner/bridge_query_planner.rs
expression: "subselections_keys(\"query Q { me {\n            id\n            reviews {\n                id\n                ... @defer { body(format: true) }\n            }\n        }}\").await"
---
 { me { id reviews { id } } }
/me/reviews { body(format: true) }
