apollo-router/src/query_planner/snapshots/apollo_router__query_planner__bridge_query_planner__tests__plan_invalid_query_errors.snap
---
source: apollo-router/src/query_planner/bridge_query_planner.rs
expression: errors
---
[
    GraphQLError {
        message: "fragment `UnusedTestFragment` must be used in an operation",
        locations: [
            GraphQLLocation {
                line: 1,
                column: 1,
            },
        ],
    },
]
