apollo-router/src/query_planner/snapshots/apollo_router__query_planner__bridge_query_planner__tests__plan_root.snap
---
source: apollo-router/src/query_planner/bridge_query_planner.rs
expression: plan.root
---
Fetch(
    FetchNode {
        service_name: "accounts",
        requires: [],
        variable_usages: [],
        operation: "{me{name{first last}}}",
        operation_name: None,
        operation_kind: Query,
        id: None,
        input_rewrites: None,
        output_rewrites: None,
        schema_aware_hash: QueryHash(
            "8d5fa7b9c03ada5f622a0b8904666d3209ffc753a1ae3a647cc1c61b6892f220",
        ),
    },
)
